<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aswin.nitcmesschronicles.CreateNew">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/normal_textview_style"
        android:text="@string/textview_mess_name"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edittext_style"
        android:id="@+id/et_mess_name"
        android:hint="@string/et_Mess_Name_Hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/normal_textview_style"
                android:text="@string/textview_month"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edittext_style"
                android:id="@+id/et_month"
                android:hint="@string/et_Mess_Month_Hint"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/normal_textview_style"
                android:text="@string/textview_year"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edittext_style"
                android:inputType="number"
                android:id="@+id/et_year"
                android:hint="@string/et_Mess_Year_Hint"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b_create"
        style="@style/button_style"
        android:text="@string/button_create_new"
        />



</LinearLayout>