<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aswin.nitcmesschronicles.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_endResult"
        android:text="@string/textview_end_result"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/normal_textview_style"
        android:id="@+id/tv_current_extra"
        android:text="@string/textview_above_edittext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edittext_style"
        android:id="@+id/et_extra_taken"
        android:inputType="number"
        android:hint="@string/et_current_extra_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_add"
            style="@style/button_style"
            android:layout_weight="1"
            android:text="@string/button_add"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:layout_weight="1"
            android:id="@+id/b_show"
            android:text="@string/button_show"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/button_style"
        android:text="@string/button_undo"
        android:id="@+id/b_undo"/>



</LinearLayout>
